<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluedark"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="100dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/iv_logo_registro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/userInfo"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="text"
            android:text="@string/hintName"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <!--Button con el mensaje de bienvenida a la App-->

        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/hintLastName"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/hintEmail"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/hintPhone"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="serif"
            android:padding="1dp"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:cornerRadius="30dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

        <Button
        android:id="@+id/bt_getaccess"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/getAccess"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:cornerRadius="30dp"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    </LinearLayout>

</ScrollView>