<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluedark">

    <!--TextView del nombre de la App-->
    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mainlogo" />

    <!--TextView con el mensaje de bienvenida a la App-->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="343dp"
        android:layout_height="86dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appname" />

    <!--Button con el mensaje de bienvenida a la App-->
    <Button
        android:id="@+id/bt_get_in"
        android:layout_width="234dp"
        android:layout_height="68dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/get_start"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:cornerRadius="30dp"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <!--TextView con link para registrarse en la App-->
    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_get_in" />

    <!--ImageView del logo principal de la App-->
    <ImageView
        android:id="@+id/iv_mainlogo"
        android:layout_width="235dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/mainlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>